--- a/preview-site-src/index.html
+++ b/preview-site-src/index.html
@@ -1,6 +1,62 @@
 <div id="preamble">
 <div class="sectionbody">
-<div class="paragraph">
+
+
+    <div class="card-grid">
+        <div class="card-wrap">
+        <div class="card" aria-labelledby="cardset1_android">
+        <div class="paragraph">
+        <p><code>app/src/main/assets/mobile-services.json</code></p>
+        </div>
+        </div>
+        <div class="card" aria-labelledby="cardset1_ios">
+        <div class="paragraph">
+        <p><code>&lt;app directory&gt;/mobile-services.json</code>
+        NOTE: Ensure that <code>mobile-services.json</code> is a member of the project in the Xcode Project Navigator.</p>
+        </div>
+        </div>
+        <div class="card" aria-labelledby="cardset1_cordova">
+        <div class="paragraph">
+        <p><code>src/mobile-services.json</code></p>
+        </div>
+        </div>
+        <div class="card" aria-labelledby="cardset1_xamarin">
+        <div class="paragraph">
+        <p><code>Resources/mobile-services.json</code></p>
+        </div>
+        </div>
+        </div>
+        </div>
+
+    <div class="card-grid">
+        <div class="card-wrap">
+          <div class="card">
+            <div>
+              <b>Getting Started</b>
+             <ul>
+               <li>Testing               </li>
+               <li>Test again</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="card-wrap">
+            <div class="card">
+              <div>
+                <b>Getting Finished</b>
+                <p>anything can go here </p>
+             but how can I make the height right?
+                <p/>
+                I suppose I could just live with it/
+                <p> but i wonder what if one line is a lot longer</p>
+         
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+  <div class="paragraph">
 <p>Platonem complectitur mediocritatem ea eos.
 Ei nonumy deseruisse ius.
 Mel id omnes verear.
